<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	 -->
    <item
	    android:id="@+id/action_refresh"
	    android:showAsAction="always"
	    android:icon="@drawable/ic_action_refresh"
	    android:title="@string/action_refresh"/>
    
	<item
	    android:id="@+id/action_overflow"
	    android:showAsAction="always"
	    android:icon="@drawable/ic_action_overflow"
	    android:title="@string/action_more">
	    <menu>
	        <item
	            android:id="@+id/action_about"
	            android:title="@string/action_about"/>
	        <item
	            android:id="@+id/action_help"
	            android:title="@string/action_help"/>
	        <!-- 
	        <item
	            android:id="@+id/action_settings"
	            android:title="@string/action_settings"/>  -->
	    </menu>
	</item>
</menu>
